<resources>
    <string name="app_name">Quit \n Together</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quit Together</string>
    <string name="nav_header_subtitle">Welcome back</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="launch_logo">launch_logo</string>
    <string name="quit_together1">Quit</string>
    <string name="quit_together2">Together</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_name_empty_msg">Name cannot be empty.</string>
    <string name="register_price_per_pack_msg">Price per pack is not an valid value. Should be numeric and > 0.</string>
    <string name="register_email">Email</string>
    <string name="register_email_empty_msg">Email cannot be empty</string>
    <string name="register_email_format_msg">Email format is wrong. Must contain at least 1 \'@\' and end with \'.\' following by domain</string>
    <string name="register_email_exist_msg">User with same email already exist. Please change another email.</string>
    <string name="register_throw_exception">Register fail due to exception thrown. Try again. If not work, unintall this shit app.</string>
    <string name="register_success">Register successfully.</string>
    <string name="register_pwd_empty_msg">Password cannot be empty</string>
    <string name="register_pwd_format_msg">Password at least has 8 length. Contains at least 1 special character, 1 lower and upper letter, and 1 number</string>
    <string name="supporter_not_found">The user with this email not found. Please change another one.</string>
    <string name="supporter_is_smoker">Cannot designate yourself as your supporter. Please change another email.</string>
    <string name="error_msg">Unexpected error occur. Please try again. If keep failing, smash your mobile immediately.</string>
    <string name="register_age">Please select age.</string>
    <string name="register_gender">Please select a gender</string>
    <string name="login_pwd_hint">Password</string>
    <string name="i_am_a_smoker">I am quitter</string>
    <string name="supporter">I am supporter</string>
    <string name="register_title">Create a new account</string>
    <string name="spinner_age_selector">Age</string>
    <string name="spinner_gender_selector">Gender</string>
    <string name="supporter_label">Type in your supporter email</string>
    <string name="tvChol_title">Chol</string>
    <string name="tvSBP_title">SBP</string>
    <string name="tvHDL_title">HDL</string>
    <string name="lbl_chol_msg">(140&lt;x&lt;300)</string>
    <string name="lbl_SBP_msg">(105&lt;x&lt;200)</string>
    <string name="lbl_HDL_msg">(30&lt;x&lt;150)</string>
    <string name="txtChol_hint">mg (140 ~ 300)</string>
    <string name="txtSBP_hint">mmHg (105 ~ 200)</string>
    <string name="txtHDL_hint">mg (30 ~ 150)</string>
    <string name="how_many_cigarettes_do_you_smoke_a_day">How many cigarettes do you smoke a day?</string>
    <string name="smoke_per_day">Smoke per day</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="survey_smoke">smoke</string>
    <string name="survery_age">age</string>
    <string name="survey_gender">gender</string>
    <string name="lbl_quit_reason">At your age, people quit because of...</string>
    <string name="survey_smoke_err_msg">Smoke No. cannot be 0.</string>
    <string name="survey_age_err_msg">Please choose your age</string>
    <string name="survey_gender_err_msg">Please choose your gender</string>
    <string name="calculate_chol_err_msg">Chol is not in valid range</string>
    <string name="calculate_sbp_err_msg">SBP is not in valid range</string>
    <string name="calculate_hdl_err_msg">HDL is not in valid range</string>
    <string name="mean_higher_than_avg">At your cigarette consumption, you approximately smoke %d more cigarettes a week compared to the population average.</string>
    <string name="mean_lower_than_avg">At your cigarette consumption, you approximately smoke %d less cigarettes a week compared to the population average.</string>
    <string name="succ_chance">At your age, you are %s times more likely to reduce your consumption (%s percent) compared to quitting cold turkey (%s percent)</string>
    <string name="fail_chance">At your age, you are %s times more likely to fail to quit cold turkey (%s percent) compared to reducing consumption (%s percent) </string>
    <string name="succ_cold_turkey_behaviour">successfully quit cold turkey</string>
    <string name="succ_reduce_behaviour">successfully reduced amount</string>
    <string name="fail_cold_turkey_behaviour">failed to quit cold turkey</string>
    <string name="fail_reduce_behaviour">failed to reduce amount</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_price_per_pack">Price of usual pack of smokes</string>
    <string name="next">back</string>
    <string name="survey_start_btn">Find Out your Quit Chance</string>
    <string name="motive">Find out the Top Motivators</string>
    <string name="back">Back</string>
    <string name="hint_chol">Cholesterol is one of three major classes of lipids which all animal cells use to construct their membranes and is thus manufactured by all animal cells. High cholesterol, is the presence of high levels of cholesterol in the blood. It is a form of high blood lipids and hyperlipoproteinemia</string>
    <string name="hint_sbp">Measures the pressure in your blood vessels when your heart rests between beats. If the measurement reads you 120/80 mmHg, the first number and larger one, 120 is your SBP.</string>
    <string name="hint_hdl">High density lipoprotein (HDL cholesterol) is called the ‘good cholesterol’ because it helps to keep cholesterol from building up in the arteries.</string>
    <string name="frs_desc">The Framingham Risk Score is a gender-specific algorithm used to estimate your 10-year cardiovascular risk.</string>
    <string name="high_risk">High-Risk</string>
    <string name="high_risk_range">17% - 30%</string>
    <string name="medium_risk">Medium-Risk</string>
    <string name="medium_risk_range">4% - 16%</string>
    <string name="low_risk">Low-Risk</string>
    <string name="low_risk_range">0% - 3%</string>

    <string name="create_plan_empty_target">Target number cannot be blank.</string>
    <string name="create_plan_no_partner">You have not designate your supporter. Please designate your supporter first.</string>
    <string name="create_plan_proceeding_task_exist">You have a proceeding plan and cannot create new plan before completion.</string>
    <string name="partner_set">Supporter has been set</string>
    <string name="channel_name">quit smoke</string>
    <string name="channel_id">check_plan_create</string>
    <string name="target_amount">Target Amount:</string>
    <string name="status_of_plan">Plan Status:</string>
    <string name="real_amount_from_smoker">Current Real Amount:</string>
    <string name="title_your_progress">Your Monthly Cigarette Quota</string>
    <string name="title_plan_detail_progress">Your Quitter\'s Cigarette Quota</string>
    <string name="title_panic_button">Press the button if you want to smoke</string>
    <string name="title_update_encouragement">Press the button below to update your encouragement</string>
    <string name="panic_button_msg">You have smoked %s cigarettes for this month. Are you sure you want to smoke?</string>
    <string name="access_token">HqENWLsTVnZCbCt0w8oWyn7NsAK7zVxp</string>
    <string name="not_create_plan_msg">You have no running plan. Please create one first.</string>
    <string name="attribution">From the Australian \'National Drug Strategy Household Survey\'</string>
    <string name="your_encouragement">Here is the encouragement from your supporter:</string>
    <string name="login">Login</string>
    <string name="update_encouragement">What do you want to say for encouraging your partner?</string>
    <string name="succ_update_encourgement">Work Complete!</string>
    <string name="game_if_restart">Do you want to play again?</string>
    <string name="default_value_pending">Pending</string>
    <string name="milestone_title">Smoke-free Milestone</string>
    <string name="money_title">Potential Money Saved</string>
    <string name="supporter_set_milestone_title">What is your expectation of milestone? (No. of Successive days of Quitting)</string>
    <string name="reward_title">What is the reward you want to give if your partner meet the target?</string>
    <string name="facebook_app_id">339498776616812</string>
    <string name="milestone_target_error">Milestone Target cannot be empty.</string>
    <string name="no_network_msg">Network not connect. Please connect first.</string>
    <string name="tap_remind_default_msg">Tap below to set amount and to see more details</string>
    <string name="no_running_plan">No new plan created by your partner.</string>
    <string name="progress_bar_click_message">Your monthly plan target is %d. You have taken %d</string>
    <string name="tutorial_msg">Tutorial:\n 1) A Quitter has to designate you as his Supporter \n 2) Then Quitter has to create a plan and you will see it appear below \n 3) You can tap on the entries that appear below'</string>
    <string name="milestone_tip">Tap this number above for details</string>
    <string name="target_amount_default">Target Amount set By your quitter:</string>
    <array name="user_role">
        <item>I am quitter</item>
        <item>I am supporter</item>
    </array>

    <array name="map_view_type_array">
        <item>Optiion 1</item>
        <item>Optiion 2</item>
    </array>
</resources>
