<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRiskResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="0.0%"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/table_calculate_frs" />

    <TableLayout
        android:id="@+id/table_calculate_frs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/calculate_frs_tvAdjustLayout">

        <TableRow>

            <TextView
                android:id="@+id/tvChol"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="end"
                android:paddingRight="20dp"
                android:text="@string/tvChol_title"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/txtChol"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:layout_weight="7"
                android:inputType="number"
                android:background="@drawable/edit_text_style"
                android:hint="@string/txtChol_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/lblCholMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_chol_msg"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="12dp"
                android:textColor="#FFFFFF"
                android:layout_column="1"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tvSBP"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/tvSBP_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="3"
                android:paddingRight="20dp"
                android:textColor="#FFFFFF"
                android:gravity="end" />
            <EditText
                android:id="@+id/txtSBP"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:layout_weight="7"
                android:inputType="number"
                android:background="@drawable/edit_text_style"
                android:hint="@string/txtSBP_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/lbSBPMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/lbl_SBP_msg"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="12dp"
                android:layout_column="1"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tvHDL"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:paddingRight="20dp"
                android:layout_weight="3"
                android:text="@string/tvHDL_title"
                android:textColor="#FFFFFF"
                android:gravity="end" />
            <EditText
                android:id="@+id/txtHDL"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:layout_weight="7"
                android:inputType="number"
                android:background="@drawable/edit_text_style"
                android:hint="@string/txtHDL_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/lbHDLMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_HDL_msg"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="12dp"
                android:textColor="#FFFFFF"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:paddingTop="40dp"
            android:layout_span="2"
            android:gravity="center">

            <Button
                android:id="@+id/btnCalculateFrs"
                android:layout_width="wrap_content"
                android:text="Done"
                android:theme="@style/AppTheme.Button" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/calculate_frs_tvAdjustLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>