<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#33CCCC" >

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:background="#FFFFFF"
            android:gravity="center">

            <ImageView
                android:layout_height="199dp"
                android:contentDescription="@string/launch_logo"
                android:src="@drawable/launch_logo" />
        </TableRow>

        <TableRow
            android:gravity="center_horizontal"
            android:paddingTop="150dp">

            <TextView
                android:id="@+id/lblAppName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:color="#FF2345"
                android:fontFamily="@font/nanum_brush_script"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/quite_together"
                android:textSize="180px" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textSize="85px" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="80px" />
</LinearLayout>
